fixed alignment and backgrounds of property id page (WIP - table still unformatted)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -596,7 +596,7 @@ form.signup_form {
   box-sizing: border-box;
   border: 2px solid rgba(0, 0, 0, 0.02);
   margin-bottom: 50px;
-  margin-left: 46px;
+  margin-left: 110px;
   text-align: center;
   margin-bottom: 27px;
   font-family: 'Ubuntu', sans-serif;
@@ -613,6 +613,7 @@ form.signup_form {
 
 .rent_form{
   padding-top: 40px;
+  margin-left: 110px;
 }
 
 .start_rent {
@@ -666,7 +667,7 @@ form.signup_form {
   padding-bottom: 10px;
   padding-top: 10px;
   font-family: 'Ubuntu', sans-serif;
-  margin-left: 30%;
+  margin-left: 33%;
   font-size: 13px;
   box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
 }
@@ -748,13 +749,13 @@ form.signup_form {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
-  background: rgba(136, 126, 126, 0.04);
+  /* background: rgba(136, 126, 126, 0.04); */
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
+  /* border: 2px solid rgba(0, 0, 0, 0.02); */
   margin-bottom: 50px;
   margin-left: 46px;
   text-align: center;
@@ -768,13 +769,13 @@ form.signup_form {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
-  background: rgba(136, 126, 126, 0.04);
+  /* background: rgba(136, 126, 126, 0.04); */
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
+  /* border: 2px solid rgba(0, 0, 0, 0.02); */
   margin-bottom: 50px;
   margin-left: 46px;
   text-align: center;
@@ -797,7 +798,7 @@ form.signup_form {
   box-sizing: border-box;
   border: 2px solid rgba(0, 0, 0, 0.02);
   margin-bottom: 50px;
-  margin-left: 46px;
+  margin-left: 110px;
   text-align: center;
   margin-bottom: 3px;
   font-family: 'Ubuntu', sans-serif;
@@ -809,15 +810,15 @@ form.signup_form {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
-  background: rgba(136, 126, 126, 0.04);
+  /* background: rgba(136, 126, 126, 0.04); */
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
+  /* border: 2px solid rgba(0, 0, 0, 0.02); */
   margin-bottom: 50px;
-  margin-left: 46px;
+  margin-left: 110px;
   text-align: center;
   margin-bottom: 3px;
   font-family: 'Ubuntu', sans-serif;
@@ -837,7 +838,7 @@ form.signup_form {
   box-sizing: border-box;
   border: 2px solid rgba(0, 0, 0, 0.02);
   margin-bottom: 50px;
-  margin-left: 46px;
+  margin-left: 110px;
   text-align: center;
   margin-bottom: 3px;
   font-family: 'Ubuntu', sans-serif;
@@ -849,15 +850,15 @@ form.signup_form {
   font-weight: 700;
   font-size: 14px;
   letter-spacing: 1px;
-  background: rgba(136, 126, 126, 0.04);
+  /* background: rgba(136, 126, 126, 0.04); */
   padding: 10px 20px;
   border: none;
   border-radius: 20px;
   outline: none;
   box-sizing: border-box;
-  border: 2px solid rgba(0, 0, 0, 0.02);
+  /* border: 2px solid rgba(0, 0, 0, 0.02); */
   margin-bottom: 50px;
-  margin-left: 46px;
+  margin-left: 110px;
   text-align: center;
   margin-bottom: 3px;
   font-family: 'Ubuntu', sans-serif;
